--- a/WBNEWANSWEARS/MainWindow.xaml
+++ b/WBNEWANSWEARS/MainWindow.xaml
@@ -1,12 +1,142 @@
-﻿<Window x:Class="WBNEWANSWEARS.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WBNEWANSWEARS"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+﻿<Window
+    x:Class="WBNEWANSWEARS.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:local="clr-namespace:WBNEWANSWEARS"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="1100"
+    Height="630"
+    AllowsTransparency="True"
+    Background="Transparent"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
+    <Border
+        Padding="20"
+        CornerRadius="12"
+        MouseDown="UIElement_Border_MouseDown">
+        <Border.Background>
+            <LinearGradientBrush>
+                <GradientStop Offset="0.6" Color="#7469B6" />
+                <GradientStop Offset="1" Color="#69619B" />
+            </LinearGradientBrush>
+        </Border.Background>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="220" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <!--  MENU  -->
+            <Border Grid.RowSpan="2" CornerRadius="12">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Offset="0.6" Color="#8179B3" />
+                        <GradientStop Offset="1.5" Color="#69619B" />
+                    </LinearGradientBrush>
+                </Border.Background>
 
-    </Grid>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <!--  InfoTop  -->
+                    <StackPanel
+                        Grid.Row="0"
+                        Margin="0,30,0,30"
+                        HorizontalAlignment="Center"
+                        Orientation="Vertical">
+                        <TextBlock
+                            FontFamily="{StaticResource Inter}"
+                            FontSize="32"
+                            FontStyle="Normal"
+                            FontWeight="Bold"
+                            Text="WBAS">
+                            <TextBlock.Foreground>
+                                <RadialGradientBrush>
+                                    <GradientStop Color="#FFFFE6E6" />
+                                    <GradientStop Offset="1" Color="White" />
+                                </RadialGradientBrush>
+                            </TextBlock.Foreground>
+                            <TextBlock.Effect>
+                                <DropShadowEffect BlurRadius="10" Opacity="0.2" />
+                            </TextBlock.Effect>
+                        </TextBlock>
+                        <TextBlock
+                            Margin="0,0,0,15"
+                            HorizontalAlignment="Right"
+                            FontFamily="{StaticResource Inter}"
+                            FontSize="12"
+                            FontStyle="Normal"
+                            FontWeight="Bold"
+                            Foreground="#FFE6E6"
+                            Text="by Renny">
+                            <TextBlock.Effect>
+                                <DropShadowEffect BlurRadius="10" Opacity="0.1" />
+                            </TextBlock.Effect>
+                        </TextBlock>
+                        <TextBlock
+                            Margin="0,0,0,30"
+                            HorizontalAlignment="Center"
+                            FontFamily="{StaticResource Inter}"
+                            FontSize="10"
+                            FontStyle="Normal"
+                            FontWeight="Normal"
+                            Foreground="#FFE6E6"
+                            Text="ver 1.0.0">
+                            <TextBlock.Effect>
+                                <DropShadowEffect BlurRadius="10" Opacity="0.2" />
+                            </TextBlock.Effect>
+                        </TextBlock>
+                    </StackPanel>
+
+                    <!--  Menu Items  -->
+                    <StackPanel Grid.Row="1">
+                        <Button
+                            Background="#FFE6E6"
+                            Foreground="#8179B3"
+                            Style="{StaticResource menuButton}">
+                            <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                                <iconPacks:PackIconMaterial Kind="HomeVariant" Style="{StaticResource menuButtonIcon}" />
+                                <TextBlock Style="{StaticResource menuButtonText}" Text="Главная" />
+                            </StackPanel>
+                        </Button>
+                        <Button Style="{StaticResource menuButton}">
+                            <StackPanel Orientation="Horizontal">
+                                <iconPacks:PackIconMaterial Kind="CodeGreaterThanOrEqual" Style="{StaticResource menuButtonIcon}" />
+                                <TextBlock Style="{StaticResource menuButtonText}" Text="Запуск" />
+                            </StackPanel>
+                        </Button>
+                        <Button Style="{StaticResource menuButton}">
+                            <StackPanel Orientation="Horizontal">
+                                <iconPacks:PackIconMaterial Kind="CogBox" Style="{StaticResource menuButtonIcon}" />
+                                <TextBlock Style="{StaticResource menuButtonText}" Text="Настройки" />
+                            </StackPanel>
+                        </Button>
+                        <Button Style="{StaticResource menuButton}">
+                            <StackPanel Orientation="Horizontal">
+                                <iconPacks:PackIconMaterial Kind="MessageBulleted" Style="{StaticResource menuButtonIcon}" />
+                                <TextBlock Style="{StaticResource menuButtonText}" Text="Шаблоны" />
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
+                    <StackPanel Grid.Row="2" VerticalAlignment="Bottom">
+                        <Button Click="ButtonBase_OnClick" Style="{StaticResource menuButtonClose}">
+                            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                                <iconPacks:PackIconMaterial Kind="CloseBox" Style="{StaticResource menuButtonIconClose}" />
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </Grid>
+    </Border>
 </Window>
