--- a/WBNEWANSWEARS/App.xaml
+++ b/WBNEWANSWEARS/App.xaml
@@ -3,33 +3,68 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    StartupUri="MainWindow.xaml">
+    xmlns:view="clr-namespace:WBNEWANSWEARS.MVVM.View"
+    xmlns:viewModel="clr-namespace:WBNEWANSWEARS.MVVM.ViewModel">
     <Application.Resources>
-        <FontFamily x:Key="Inter">pack://application:,,,/Fonts/#Inter</FontFamily>
+        <!--  Data template for navigation  -->
+        <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+            <view:HomeView />
+        </DataTemplate>
 
-        <Style x:Key="menuButton" TargetType="Button">
+        <DataTemplate DataType="{x:Type viewModel:SettingsViewModel}">
+            <view:SettingsView />
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewModel:CommentsViewModel}">
+            <view:CommentsView />
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewModel:ActiveViewModel}">
+            <view:ActiveView />
+        </DataTemplate>
+
+        <!--  Font  -->
+        <FontFamily x:Key="Inter">pack://application:,,,/Fonts/#Inter</FontFamily>
+        <!--  Menu buttons  -->
+        <Style x:Key="menuButton" TargetType="RadioButton">
             <Setter Property="Background" Value="Transparent" />
             <Setter Property="Foreground" Value="#FFE6E6" />
             <Setter Property="Height" Value="45" />
+            <Setter Property="Cursor" Value="Hand" />
             <Setter Property="FontWeight" Value="Medium" />
             <Setter Property="FontSize" Value="16" />
             <Setter Property="FocusVisualStyle" Value="{x:Null}" />
             <Setter Property="Margin" Value="15,0,15,5" />
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="10">
-                            <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                    <ControlTemplate TargetType="RadioButton">
+                        <Border
+                            x:Name="border"
+                            Background="{TemplateBinding Background}"
+                            CornerRadius="10">
+                            <ContentPresenter
+                                x:Name="insideContent"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Center" />
                         </Border>
+                        <ControlTemplate.Triggers>
+
+                            <Trigger Property="IsChecked" Value="True">
+
+                                <Setter TargetName="border" Property="Background" Value="#FFE6FF" />
+
+                                <Setter Property="TextBlock.Foreground" Value="#8179B3" />
+
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FFE6E6" />
+                                <Setter Property="Foreground" Value="#8179B3" />
+                            </Trigger>
+
+                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#FFE6FF" />
-                    <Setter Property="Foreground" Value="#8179B3" />
-                </Trigger>
-            </Style.Triggers>
         </Style>
 
         <Style x:Key="menuButtonIcon" TargetType="Icon:PackIconMaterial">
@@ -37,19 +72,20 @@
             <Setter Property="Width" Value="20" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="Height" Value="20" />
-            <Setter Property="Foreground" Value="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}" />
+            <Setter Property="Foreground" Value="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type RadioButton}}}" />
         </Style>
 
         <Style x:Key="menuButtonText" TargetType="TextBlock">
             <Setter Property="Margin" Value="20,0,0,2" />
             <Setter Property="FontSize" Value="16" />
-            <Setter Property="Foreground" Value="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}" />
+            <Setter Property="Foreground" Value="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type RadioButton}}}" />
         </Style>
 
         <Style x:Key="menuButtonClose" TargetType="Button">
             <Setter Property="Background" Value="Transparent" />
             <Setter Property="Foreground" Value="#FFE6E6" />
             <Setter Property="Height" Value="45" />
+            <Setter Property="Cursor" Value="Hand" />
             <Setter Property="FontWeight" Value="Medium" />
             <Setter Property="FontSize" Value="16" />
             <Setter Property="FocusVisualStyle" Value="{x:Null}" />
@@ -77,5 +113,17 @@
             <Setter Property="Height" Value="28" />
             <Setter Property="Foreground" Value="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}" />
         </Style>
+
+        <!--  HomeView Styles  -->
+
+        <Style x:Key="HeaderPageTextStyle" TargetType="TextBlock">
+            <Setter Property="Padding" Value="12" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="FontSize" Value="24" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="Foreground" Value="#FFE6E6" />
+        </Style>
+
     </Application.Resources>
 </Application>
