--- a/WBNEWANSWEARS/MVVM/View/ActiveView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/ActiveView.xaml
@@ -3,12 +3,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:local="clr-namespace:WBNEWANSWEARS.MVVM.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModel="clr-namespace:WBNEWANSWEARS.MVVM.ViewModel"
+    d:DataContext="{d:DesignInstance Type=viewModel:ActiveViewModel}"
     d:DesignHeight="590"
     d:DesignWidth="820"
-    d:DataContext="{d:DesignInstance Type=viewModel:ActiveViewModel}"
     mc:Ignorable="d">
     <Border CornerRadius="12">
         <Border.Background>
@@ -18,9 +19,96 @@
             </LinearGradientBrush>
         </Border.Background>
         <Grid>
-            <StackPanel>
-                <TextBlock>MEOW ACTIVE</TextBlock>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" VerticalAlignment="Center">
+                <TextBlock Style="{StaticResource HeaderPageTextStyle}" Text="Запуск ответов" />
             </StackPanel>
+            <Grid Grid.Row="1">
+                <ListBox
+                    d:ItemsSource="{d:SampleData ItemCount=10}"
+                    ItemContainerStyle="{StaticResource ListBoxItemCustomStyle}"
+                    ItemsSource="{Binding Users}"
+                    SelectionMode="Multiple"
+                    Style="{StaticResource ListBoxCustomStyle}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border
+                                Height="50"
+                                Margin="0,0,10,12"
+                                Background="#8179B3"
+                                CornerRadius="5">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="60" />
+                                    </Grid.ColumnDefinitions>
+                                    <iconPacks:PackIconMaterial
+                                        Grid.Column="0"
+                                        Width="36"
+                                        Height="36"
+                                        Margin="12,5,5,5"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Foreground="#FFE6E6"
+                                        Kind="BriefcaseAccount">
+                                        <iconPacks:PackIconMaterial.Effect>
+                                            <DropShadowEffect
+                                                Direction="320"
+                                                Opacity="0.2"
+                                                ShadowDepth="5"
+                                                Color="Gray" />
+                                        </iconPacks:PackIconMaterial.Effect>
+                                    </iconPacks:PackIconMaterial>
+                                    <TextBlock
+                                        Grid.Column="1"
+                                        Margin="12,0,0,0"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        FontSize="18"
+                                        FontWeight="Medium"
+                                        Foreground="#FFE6E6"
+                                        Text="{Binding UserName}" />
+                                    <CheckBox
+                                        Grid.Column="2"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        IsChecked="{Binding IsSelected, RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}}"
+                                        Style="{StaticResource CustomCheckBoxStyle}" />
+                                    <Border
+                                        MouseLeftButtonDown="Border_MouseLeftButtonDown"
+                                        Grid.Column="3"
+                                        Margin="10,5,10,5"
+                                        Background="LimeGreen"
+                                        CornerRadius="5"
+                                        Cursor="Hand">
+                                        <iconPacks:PackIconMaterial
+                                            Width="24"
+                                            Height="24"
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            Cursor="Hand"
+                                            Foreground="Lime"
+                                            Kind="Play">
+                                            <iconPacks:PackIconMaterial.Effect>
+                                                <DropShadowEffect
+                                                    Direction="320"
+                                                    Opacity="0.2"
+                                                    ShadowDepth="3"
+                                                    Color="Gray" />
+                                            </iconPacks:PackIconMaterial.Effect>
+                                        </iconPacks:PackIconMaterial>
+                                    </Border>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
         </Grid>
     </Border>
 </UserControl>
