--- a/WBNEWANSWEARS/MVVM/View/HomeView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/HomeView.xaml
@@ -29,9 +29,10 @@
             </StackPanel>
             <ScrollViewer
                 Grid.Row="1"
+                Margin="0,24,12,24"
                 Style="{StaticResource FavsScrollViewer}"
                 VerticalScrollBarVisibility="Auto">
-                <ItemsControl Padding="12" ItemsSource="{Binding Cards}">
+                <ItemsControl Padding="12,0,0,0" ItemsSource="{Binding Cards}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel HorizontalAlignment="Center" Orientation="Horizontal" />
