--- a/WBNEWANSWEARS/MVVM/View/ActiveView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/ActiveView.xaml
@@ -22,6 +22,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="60" />
                 <RowDefinition Height="*" />
+                <RowDefinition Height="0.2*" />
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0" VerticalAlignment="Center">
                 <TextBlock Style="{StaticResource HeaderPageTextStyle}" Text="Запуск ответов" />
@@ -35,11 +36,7 @@
                     Style="{StaticResource ListBoxCustomStyle}">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <Border
-                                Height="50"
-                                Margin="0,0,10,12"
-                                Background="#8179B3"
-                                CornerRadius="5">
+                            <Border Style="{StaticResource ActiveViewCardStyle}">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
@@ -66,12 +63,7 @@
                                     </iconPacks:PackIconMaterial>
                                     <TextBlock
                                         Grid.Column="1"
-                                        Margin="12,0,0,0"
-                                        HorizontalAlignment="Left"
-                                        VerticalAlignment="Center"
-                                        FontSize="18"
-                                        FontWeight="Medium"
-                                        Foreground="#FFE6E6"
+                                        Style="{StaticResource ActiveViewCardTextStyle}"
                                         Text="{Binding UserName}" />
                                     <CheckBox
                                         Grid.Column="2"
@@ -80,12 +72,12 @@
                                         IsChecked="{Binding IsSelected, RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}}"
                                         Style="{StaticResource CustomCheckBoxStyle}" />
                                     <Border
-                                        MouseLeftButtonDown="Border_MouseLeftButtonDown"
                                         Grid.Column="3"
                                         Margin="10,5,10,5"
                                         Background="LimeGreen"
                                         CornerRadius="5"
-                                        Cursor="Hand">
+                                        Cursor="Hand"
+                                        MouseLeftButtonDown="Border_MouseLeftButtonDown">
                                         <iconPacks:PackIconMaterial
                                             Width="24"
                                             Height="24"
@@ -109,6 +101,53 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </Grid>
+            <StackPanel
+                Grid.Row="2"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
+                <Border
+                    Width="auto"
+                    Padding="0,5,15,10"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Background="#7469B6"
+                    CornerRadius="10">
+                    <StackPanel Orientation="Horizontal">
+                        <Border
+                            Margin="10,5,10,5"
+                            CornerRadius="5"
+                            Cursor="Hand"
+                            MouseLeftButtonDown="Border_MouseLeftButtonDown">
+                            <iconPacks:PackIconMaterial
+                                Width="18"
+                                Height="18"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Cursor="Hand"
+                                Foreground="Lime"
+                                Kind="Play">
+                                <iconPacks:PackIconMaterial.Effect>
+                                    <DropShadowEffect
+                                        Direction="320"
+                                        Opacity="0.2"
+                                        ShadowDepth="3"
+                                        Color="Gray" />
+                                </iconPacks:PackIconMaterial.Effect>
+                            </iconPacks:PackIconMaterial>
+                        </Border>
+                        <TextBlock
+                            Margin="0"
+                            Style="{StaticResource ActiveViewBottomText}"
+                            Text="Запустить" />
+                    </StackPanel>
+                </Border>
+                <TextBlock
+                    Margin="20,0,0,0"
+                    Style="{StaticResource ActiveViewBottomText}"
+                    Text="Выбрать всех"
+                    TextDecorations="underline" />
+            </StackPanel>
         </Grid>
     </Border>
 </UserControl>
