--- a/WBNEWANSWEARS/MVVM/View/ActiveView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/ActiveView.xaml
@@ -108,14 +108,16 @@
                 Orientation="Horizontal">
                 <Border
                     Width="auto"
-                    Padding="0,5,15,10"
+                    Padding="0,10,15,10"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Background="#7469B6"
-                    CornerRadius="10">
+                    CornerRadius="10"
+                    Cursor="Hand">
                     <StackPanel Orientation="Horizontal">
                         <Border
-                            Margin="10,5,10,5"
+                            Margin="10,0,10,0"
+                            VerticalAlignment="Center"
                             CornerRadius="5"
                             Cursor="Hand"
                             MouseLeftButtonDown="Border_MouseLeftButtonDown">
