--- a/WBNEWANSWEARS/MVVM/View/SettingsView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/SettingsView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:local="clr-namespace:WBNEWANSWEARS.MVVM.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModel="clr-namespace:WBNEWANSWEARS.MVVM.ViewModel"
@@ -18,9 +19,180 @@
             </LinearGradientBrush>
         </Border.Background>
         <Grid>
-            <StackPanel>
-                <TextBlock>MEOW SETTINGS</TextBlock>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" VerticalAlignment="Center">
+                <TextBlock Style="{StaticResource HeaderPageTextStyle}" Text="Настройка пользователей" />
             </StackPanel>
+            <Border Grid.Row="1" Margin="15,0,15,15">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="15" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="0.1*" />
+                    </Grid.RowDefinitions>
+                    <Border
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="0,0,0,0"
+                        Padding="12,12,0,12"
+                        Background="#7469B6"
+                        CornerRadius="12">
+                        <ListBox
+                            d:ItemsSource="{d:SampleData ItemCount=15}"
+                            Background="Transparent"
+                            ItemContainerStyle="{StaticResource ListBoxItemCustomStyle}"
+                            ItemsSource="{Binding Users}"
+                            SelectionMode="Multiple"
+                            Style="{StaticResource SettingsListBoxCustomStyle}">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <Border Width="345" Style="{StaticResource ActiveViewCardStyle}">
+                                        <RadioButton
+                                            Cursor="Hand"
+                                            GroupName="UsersButtons"
+                                            Style="{StaticResource usersMenuButton}">
+                                            <StackPanel>
+                                                <TextBlock
+                                                    Margin="0"
+                                                    HorizontalAlignment="Center"
+                                                    Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type RadioButton}}}"
+                                                    Style="{StaticResource ActiveViewCardTextStyle}"
+                                                    Text="{Binding UserName}"
+                                                    TextTrimming="WordEllipsis" />
+                                            </StackPanel>
+                                        </RadioButton>
+                                    </Border>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </Border>
+                    <StackPanel
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Orientation="Horizontal">
+                        <Border Margin="0,0,5,0" Style="{StaticResource AddAndDeleteButtonsBorder}">
+                            <iconPacks:PackIconMaterial
+                                Cursor="Hand"
+                                Kind="Plus"
+                                Style="{StaticResource AddAndDeleteButtonsIcon}" />
+                        </Border>
+                        <Border Margin="5,0,0,0" Style="{StaticResource AddAndDeleteButtonsBorder}">
+                            <iconPacks:PackIconMaterial Kind="Minus" Style="{StaticResource AddAndDeleteButtonsIcon}" />
+                        </Border>
+                    </StackPanel>
+                    <Border
+                        Grid.Row="0"
+                        Grid.Column="2"
+                        Margin="0,0,0,0"
+                        Padding="0,12,0,12"
+                        Background="#7469B6"
+                        CornerRadius="12">
+                        <StackPanel>
+                            <TextBlock
+                                Margin="0"
+                                HorizontalAlignment="Center"
+                                Style="{StaticResource ActiveViewCardTextStyle}"
+                                Text="Выбранный пользователь" />
+                            <StackPanel Margin="0,12,0,0" HorizontalAlignment="Center">
+                                <TextBlock Style="{StaticResource SettingsViewSmallGrayText}" Text="Название" />
+                                <TextBox
+                                    HorizontalContentAlignment="Center"
+                                    Style="{DynamicResource TextBoxStyle}"
+                                    Tag="пусто..."
+                                    TextWrapping="NoWrap" />
+                            </StackPanel>
+                            <StackPanel Margin="0,12,0,0">
+                                <TextBlock Style="{StaticResource SettingsViewSmallGrayText}" Text="Токен контента" />
+                                <TextBox
+                                    HorizontalContentAlignment="Center"
+                                    Style="{DynamicResource TextBoxStyle}"
+                                    Tag="пусто..."
+                                    TextWrapping="NoWrap" />
+                            </StackPanel>
+                            <StackPanel Margin="0,12,0,0">
+                                <TextBlock Style="{StaticResource SettingsViewSmallGrayText}" Text="Токен отзывов/вопросов" />
+                                <TextBox
+                                    HorizontalContentAlignment="Center"
+                                    Style="{DynamicResource TextBoxStyle}"
+                                    Tag="пусто..."
+                                    TextWrapping="NoWrap" />
+                            </StackPanel>
+                            <StackPanel Height="197" Margin="0,12,0,0">
+                                <TextBlock Style="{StaticResource SettingsViewSmallGrayText}" Text="Использующиеся ответы" />
+                                <Border Height="197" Margin="15,2,5,12">
+                                    <ListBox
+                                        d:ItemsSource="{d:SampleData ItemCount=15}"
+                                        Background="Transparent"
+                                        ItemContainerStyle="{StaticResource ListBoxItemCustomStyle}"
+                                        ItemsSource="{Binding Users}"
+                                        SelectionMode="Multiple"
+                                        Style="{StaticResource SettingsListBoxCustomStyle}">
+                                        <ListBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <Border Height="30" Style="{StaticResource ActiveViewCardStyle}">
+                                                    <Grid>
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="30" />
+                                                            <ColumnDefinition Width="*" />
+                                                            <ColumnDefinition Width="30" />
+                                                        </Grid.ColumnDefinitions>
+                                                        <TextBlock
+                                                            Grid.Column="0"
+                                                            HorizontalAlignment="Center"
+                                                            VerticalAlignment="Center"
+                                                            FontSize="16"
+                                                            Foreground="#FFE6E6"
+                                                            Text="10" />
+                                                        <Border
+                                                            Grid.Column="1"
+                                                            Padding="5,0"
+                                                            BorderBrush="#FFE6E6"
+                                                            BorderThickness="1,0,1,0">
+                                                            <TextBlock
+                                                                Margin="0"
+                                                                HorizontalAlignment="Center"
+                                                                FontSize="14"
+                                                                Style="{StaticResource ActiveViewCardTextStyle}"
+                                                                Text="{Binding UserName}" />
+                                                        </Border>
+                                                        <!--  DO AFTER MERGING  -->
+                                                        <CheckBox
+                                                            Grid.Column="2"
+                                                            HorizontalAlignment="Center"
+                                                            VerticalAlignment="Center"
+                                                            IsChecked="False"
+                                                            Style="{StaticResource SettingsCustomCheckBoxStyle}" />
+                                                    </Grid>
+                                                </Border>
+                                            </DataTemplate>
+                                        </ListBox.ItemTemplate>
+                                    </ListBox>
+                                </Border>
+                            </StackPanel>
+                        </StackPanel>
+                    </Border>
+                    <Border
+                        Grid.Row="1"
+                        Grid.Column="2"
+                        Padding="15,10"
+                        Style="{StaticResource AddAndDeleteButtonsBorder}">
+                        <TextBlock
+                            Margin="0"
+                            FontSize="14"
+                            Style="{StaticResource ActiveViewCardTextStyle}"
+                            Text="Сохранить" />
+                    </Border>
+                </Grid>
+            </Border>
         </Grid>
     </Border>
 </UserControl>
